--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+    <style>
+
+	html , body {
+
+		background : black ;
+
+		padding : 0 ;
+		margin : 0 ;
+	}
+
+</style>
 <body>
-    <div style="font-family: Comic Sans MS, Comic Sans, cursive;">
-        <center><h1><Br><br><br>Nie marnuj czasu na ponowne pobieranie.</h1><br><h3>Pobierz kolekcję addonów <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3399704077">tutaj</a>.</h3>
+    <div style="font-family: Comic Sans MS, Comic Sans, cursive;color:white;">
+        <center><h1><Br><br><br>Kurfidołek to dobry serwer.</h1><br><h3>Minionek to potwierdzi..</h3>
         <br><img src="minionek.png" width=30%></center>
     </div>
 </body>
