--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div style="font-family: Comic Sans MS, Comic Sans, cursive;color:white;">
         <center><h1><Br><br><br>Kurfidołek to dobry serwer.</h1><br><h3>Minionek to potwierdzi..</h3>
-        <br><img src="minionek.png" width=30%></center>
+        <br><img src="3dgifmaker94034.gif" width=30%></center>
     </div>
 </body>
 </html>
